--- a/src/cvnets/yolov1/infer.ipynb
+++ b/src/cvnets/yolov1/infer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = VOCDataset(\"~/Downloads/VOC/\", imgsz=448, S=7, B=2, split=\"val\", normalize=False)\n",
+    "dataset = VOCDataset(\"~/Documents/Datasets/VOC/\", imgsz=448, S=7, B=2, split=\"val\", normalize=False)\n",
     "dataset.eval()\n",
     "\n",
     "model = YOLOv1(imgsz=imgsz, S=S, B=B, C=C)\n",
