Change yolo layout

--- a/src/cvnets/yolo/v1/infer.ipynb
+++ b/src/cvnets/yolo/v1/infer.ipynb
@@ -15,9 +15,9 @@
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "\n",
-    "from cvnets.yolov1.net import YOLOv1\n",
-    "from cvnets.yolov1.utils import decode_yolo_output, filter_detections\n",
-    "from cvnets.yolov1.voc import VOCDataset\n",
+    "from cvnets.yolo.v1.net import YOLOv1\n",
+    "from cvnets.yolo.v1.utils import decode_yolo_output, filter_detections\n",
+    "from cvnets.yolo.v1.voc import VOCDataset\n",
     "\n",
     "S = 7\n",
     "B = 2\n",
