--- a/src/cvnets/yolo/v1/infer.ipynb
+++ b/src/cvnets/yolo/v1/infer.ipynb
@@ -15,9 +15,9 @@
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "\n",
+    "from cvnets.yolo.v1.dataset import VOCDataset\n",
     "from cvnets.yolo.v1.net import YOLOv1\n",
     "from cvnets.yolo.v1.utils import decode_yolo_output, filter_detections\n",
-    "from cvnets.yolo.v1.voc import VOCDataset\n",
     "\n",
     "S = 7\n",
     "B = 2\n",
@@ -35,7 +35,7 @@
     "dataset.eval()\n",
     "\n",
     "model = YOLOv1(imgsz=imgsz, S=S, B=B, C=C)\n",
-    "model.load_state_dict(torch.load(\"./checkpoints/yolov1-voc2012.pt\", map_location=\"cpu\", weights_only=True))\n",
+    "model.load_state_dict(torch.load(\"./checkpoints/yolov1-voc.pt\", map_location=\"cpu\", weights_only=True))\n",
     "model = model.eval()"
    ]
   },
