--- a/notebooks/yolo/v2/anchor_bboxes_clustering.ipynb
+++ b/notebooks/yolo/v2/anchor_bboxes_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "from pyclustering.cluster.kmeans import kmeans\n",
     "from pyclustering.utils.metric import distance_metric, type_metric\n",
     "\n",
-    "from cvnets.yolov1.voc import VOCDataset\n",
+    "from cvnets.yolo.voc import load_voc_dataset\n",
     "\n",
     "plt.rcParams[\"text.usetex\"] = True\n",
     "plt.rcParams[\"axes.spines.right\"] = False\n",
@@ -27,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset, classes = VOCDataset.load(\"~/Documents/Datasets/VOC/\", split=\"train\")"
+    "dataset, classes = load_voc_dataset(\"~/Documents/Datasets/VOC/\", split=\"train\")"
    ]
   },
   {
