--- a/notebooks/yolo/v2/infer.ipynb
+++ b/notebooks/yolo/v2/infer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
     "with torch.inference_mode():\n",
     "    predictions = model(normalized.unsqueeze(0))\n",
     "\n",
-    "result = utils.postprocess_predictions(\n",
+    "results = utils.postprocess_predictions(\n",
     "    predictions=predictions,\n",
     "    anchors=dataset.anchors,\n",
     "    downsample=dataset.downsample,\n",
@@ -111,8 +111,8 @@
     "    nms_thresh=0.3,\n",
     ")\n",
     "\n",
-    "r = result[0]\n",
-    "for xyxy, conf, label in zip(r.xyxys, r.confs, r.labels):\n",
+    "r = results[0]\n",
+    "for xyxy, conf, label in zip(r.xyxys.numpy(), r.confs.numpy(), r.labels.numpy()):\n",
     "    x1, y1, x2, y2 = xyxy.astype(\"int32\")\n",
     "    conf = conf.item()\n",
     "    label = label.item()\n",
