--- a/notebooks/yolo/v2/infer.ipynb
+++ b/notebooks/yolo/v2/infer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "anchors = utils.load_anchor_bboxes(checkpoints.joinpath(\"anchors\", \"anchor_bboxes_k_5.npy\"))\n",
+    "anchors = utils.load_anchor_bboxes(checkpoints.joinpath(\"anchors\", \"anchors_k5.npy\"))\n",
     "dataset = VOCDataset(\"~/Documents/Datasets/VOC/\", anchors=anchors, imgsz=416, split=\"val\", normalize=False)\n",
     "\n",
     "model = YOLOv2(dataset.num_anchors, dataset.num_classes)\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
