--- a/notebooks/yolo/v2/live_infer.ipynb
+++ b/notebooks/yolo/v2/live_infer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "resize = 416\n",
     "\n",
-    "anchors = utils.load_anchor_bboxes(checkpoints.joinpath(\"anchors\", \"anchor_bboxes_k_5.npy\"))\n",
+    "anchors = utils.load_anchor_bboxes(checkpoints.joinpath(\"anchors\", \"anchors_k5.npy\"))\n",
     "num_anchors = anchors.size(0)\n",
     "\n",
     "dataset, classes = load_voc_dataset(\"~/Documents/Datasets/VOC/\", split=\"train\")\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,11 +92,11 @@
     "            org=(x1, y1 - 10),\n",
     "            fontFace=cv.FONT_HERSHEY_SIMPLEX,\n",
     "            fontScale=0.55,\n",
-    "            color=(255, 0, 0),\n",
+    "            color=(0, 255, 0),\n",
     "            thickness=1,\n",
     "            lineType=cv.LINE_AA,\n",
     "        )\n",
-    "        cv.rectangle(frame, (x1, y1), (x2, y2), (255, 0, 0), 2, cv.LINE_AA)\n",
+    "        cv.rectangle(frame, (x1, y1), (x2, y2), (0, 255, 0), 2, cv.LINE_AA)\n",
     "\n",
     "    cv.imshow(\"frame\", frame)\n",
     "\n",
