Add two neural networks from scratch

--- a/math/nn_from_scratch.ipynb
+++ b/math/nn_from_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from numpy.typing import NDArray\n",
-    "from sklearn.datasets import load_iris\n",
+    "from sklearn.datasets import load_digits, load_iris\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "plt.rcParams[\"text.usetex\"] = True\n",
@@ -27,12 +28,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **1. Simple Neural Network for Iris Dataset**"
+    "### **1. Simple Neural Network for Iris Dataset**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +262,7 @@
     }
    ],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, shuffle=True, stratify=y, random_state=42)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(input, y, test_size=0.2, shuffle=True, stratify=y, random_state=42)\n",
     "\n",
     "net = NN()\n",
     "\n",
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +289,7 @@
        "array([1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +309,7 @@
        "array([1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 1])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -332,6 +333,232 @@
    ],
    "source": [
     "print(\"Accuracy After:\", evaluate(net, x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **2. Fully Connected Neural Network for MNIST Dataset**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_hot(y: NDArray) -> NDArray:\n",
+    "    return np.eye(len(np.unique(y)))[y]\n",
+    "\n",
+    "\n",
+    "def mse_loss(y_pred: NDArray, y_true: NDArray) -> float:\n",
+    "    return np.mean((y_pred - y_true) ** 2).item()\n",
+    "\n",
+    "\n",
+    "def d_mse_loss(y_pred: NDArray, y_true: NDArray) -> NDArray:\n",
+    "    return 2 * (y_pred - y_true) / len(y_true)\n",
+    "\n",
+    "\n",
+    "class ActivationLayer:\n",
+    "    def forward(self, input: NDArray) -> NDArray:\n",
+    "        self.input = input\n",
+    "        return self.sigmoid(input)\n",
+    "\n",
+    "    def backward(self, output_error: NDArray) -> NDArray:\n",
+    "        # dE/dx = dE/dy * dy/dx = grad * d_sigmoid/dx\n",
+    "        input_error = output_error * self.d_sigmoid(self.input)\n",
+    "        return input_error\n",
+    "\n",
+    "    def step(self, lr: float) -> None:\n",
+    "        pass\n",
+    "\n",
+    "    def sigmoid(self, x: NDArray) -> NDArray:\n",
+    "        return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "    def d_sigmoid(self, x: NDArray) -> NDArray:\n",
+    "        return self.sigmoid(x) * (1 - self.sigmoid(x))\n",
+    "\n",
+    "\n",
+    "class LinearLayer:\n",
+    "    def __init__(self, in_features: int, out_features: int) -> None:\n",
+    "        self.weight = np.random.randn(in_features, out_features)\n",
+    "        self.bias = np.random.randn(1, out_features)\n",
+    "\n",
+    "    def forward(self, input: NDArray) -> NDArray:\n",
+    "        self.input = input\n",
+    "        return input @ self.weight + self.bias\n",
+    "\n",
+    "    def backward(self, output_error: NDArray) -> NDArray:\n",
+    "        # dE/dx = dE/dy * dy/dx = grad * d_linear/dx = grad * W.T\n",
+    "        input_error = output_error @ self.weight.T\n",
+    "        # dE/dW = dE/dy * dy/dW = grad * d_linear/dW = x.T @ grad\n",
+    "        self.weight_error = self.input.T @ output_error\n",
+    "        # dE/db = dE/dy * dy/db = grad * d_linear/db = grad\n",
+    "        self.bias_error = output_error.mean(axis=0, keepdims=True)\n",
+    "        return input_error\n",
+    "\n",
+    "    def step(self, lr: float) -> None:\n",
+    "        self.weight -= lr * self.weight_error\n",
+    "        self.bias -= lr * self.bias_error\n",
+    "\n",
+    "        self.weight_error = np.zeros_like(self.weight)\n",
+    "        self.bias_error = np.zeros_like(self.bias)\n",
+    "\n",
+    "\n",
+    "class Model:\n",
+    "    def __init__(self) -> None:\n",
+    "        self.layers = list()\n",
+    "\n",
+    "    def add(self, layer: LinearLayer | ActivationLayer) -> None:\n",
+    "        self.layers.append(layer)\n",
+    "\n",
+    "    def forward(self, x: NDArray) -> NDArray:\n",
+    "        for layer in self.layers:\n",
+    "            x = layer.forward(x)\n",
+    "        return x\n",
+    "\n",
+    "    def backward(self, grad: NDArray) -> None:\n",
+    "        for layer in reversed(self.layers):\n",
+    "            grad = layer.backward(grad)\n",
+    "\n",
+    "    def step(self, lr: float) -> None:\n",
+    "        for layer in self.layers:\n",
+    "            layer.step(lr)\n",
+    "\n",
+    "    def fit(self, x: NDArray, y: NDArray, epochs: int, batch_size: int, lr: float) -> None:\n",
+    "        m = len(x)\n",
+    "        batches = m // batch_size\n",
+    "\n",
+    "        for epoch in range(1, epochs + 1):\n",
+    "            loss = 0\n",
+    "            ids = np.random.permutation(m)\n",
+    "            x = x[ids]\n",
+    "            y = y[ids]\n",
+    "\n",
+    "            for i in range(0, m, batch_size):\n",
+    "                x_batch = x[i : i + batch_size]\n",
+    "                y_batch = y[i : i + batch_size]\n",
+    "\n",
+    "                y_pred = self.forward(x_batch)\n",
+    "                loss += mse_loss(y_pred, y_batch)\n",
+    "                grad = d_mse_loss(y_pred, y_batch)\n",
+    "\n",
+    "                self.backward(grad)\n",
+    "                self.step(lr)\n",
+    "\n",
+    "            if epoch % 100 == 0 or epoch == 1:\n",
+    "                print(f\"Epoch: {epoch:4d}/{epochs} Loss: {loss / batches:.5f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch:    1/2000 Loss: 0.13889\n",
+      "Epoch:  100/2000 Loss: 0.08359\n",
+      "Epoch:  200/2000 Loss: 0.06669\n",
+      "Epoch:  300/2000 Loss: 0.04982\n",
+      "Epoch:  400/2000 Loss: 0.03820\n",
+      "Epoch:  500/2000 Loss: 0.03117\n",
+      "Epoch:  600/2000 Loss: 0.02609\n",
+      "Epoch:  700/2000 Loss: 0.02271\n",
+      "Epoch:  800/2000 Loss: 0.01976\n",
+      "Epoch:  900/2000 Loss: 0.01780\n",
+      "Epoch: 1000/2000 Loss: 0.01614\n",
+      "Epoch: 1100/2000 Loss: 0.01469\n",
+      "Epoch: 1200/2000 Loss: 0.01349\n",
+      "Epoch: 1300/2000 Loss: 0.01259\n",
+      "Epoch: 1400/2000 Loss: 0.01198\n",
+      "Epoch: 1500/2000 Loss: 0.01139\n",
+      "Epoch: 1600/2000 Loss: 0.01084\n",
+      "Epoch: 1700/2000 Loss: 0.01027\n",
+      "Epoch: 1800/2000 Loss: 0.00989\n",
+      "Epoch: 1900/2000 Loss: 0.00959\n",
+      "Epoch: 2000/2000 Loss: 0.00913\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "\n",
+    "digits = load_digits()\n",
+    "\n",
+    "x = np.asarray(digits.data)  # type: ignore\n",
+    "y = np.asarray(digits.target)  # type: ignore\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, shuffle=True, stratify=y, random_state=42)\n",
+    "\n",
+    "x_train = x_train / 255.0\n",
+    "x_test = x_test / 255.0\n",
+    "\n",
+    "y_train = one_hot(y_train)\n",
+    "y_test = one_hot(y_test)\n",
+    "\n",
+    "model = Model()\n",
+    "model.add(LinearLayer(x_train.shape[-1], 32))\n",
+    "model.add(ActivationLayer())\n",
+    "model.add(LinearLayer(32, 64))\n",
+    "model.add(ActivationLayer())\n",
+    "model.add(LinearLayer(64, 10))\n",
+    "model.add(ActivationLayer())\n",
+    "\n",
+    "model.fit(x_train, y_train, 2000, 64, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.95833\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.forward(x_test).argmax(axis=1)\n",
+    "y_true = y_test.argmax(axis=1)\n",
+    "\n",
+    "print(f\"Accuracy: {np.mean(y_pred == y_true):.5f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[35,  0,  0,  0,  1,  0,  0,  0,  0,  0],\n",
+       "       [ 0, 29,  0,  1,  0,  2,  1,  0,  0,  3],\n",
+       "       [ 0,  0, 35,  0,  0,  0,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0, 37,  0,  0,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0, 36,  0,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0, 37,  0,  0,  0,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0, 35,  0,  1,  0],\n",
+       "       [ 0,  0,  0,  0,  0,  0,  0, 36,  0,  0],\n",
+       "       [ 0,  3,  0,  0,  0,  0,  0,  0, 32,  0],\n",
+       "       [ 0,  0,  0,  0,  1,  0,  0,  1,  1, 33]])"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cm = confusion_matrix(y_true, y_pred)\n",
+    "cm"
    ]
   }
  ],
