--- a/notebooks/yolo/v2/live_infer.ipynb
+++ b/notebooks/yolo/v2/live_infer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "\n",
     "from cvnets.yolo.v2 import utils\n",
     "from cvnets.yolo.v2.net import YOLOv2\n",
-    "from cvnets.yolo.voc import load_voc_dataset\n",
+    "from cvnets.yolo.voc import VOCSplit, load_voc_dataset\n",
     "\n",
     "root = Path(find_dotenv(raise_error_if_not_found=True)).parent.absolute()\n",
     "checkpoints = root.joinpath(\"src\", \"cvnets\", \"yolo\", \"v2\", \"checkpoints\")\n",
@@ -35,7 +35,7 @@
     "anchors = utils.load_anchor_bboxes(checkpoints.joinpath(\"anchors\", \"anchors_k5.npy\"))\n",
     "num_anchors = anchors.size(0)\n",
     "\n",
-    "dataset, classes = load_voc_dataset(\"~/Documents/Datasets/VOC/\", split=\"train\")\n",
+    "dataset, classes = load_voc_dataset(\"~/Documents/Datasets/VOC/\", split=VOCSplit.TRAINVAL)\n",
     "idx_to_class = {k: v for k, v in enumerate(classes)}\n",
     "num_classes = len(classes)\n",
     "\n",
