--- a/math/data_flow_in_cnn.ipynb
+++ b/math/data_flow_in_cnn.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Data Flow in Convolutional Layer**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
