--- a/math/nn_from_scratch.ipynb
+++ b/math/nn_from_scratch.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Neural Network from Scratch**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 233,
    "metadata": {},
