Update src/ structure

--- a/notebooks/resnet/check_architecture.ipynb
+++ b/notebooks/resnet/check_architecture.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from torchvision import models\n",
     "\n",
-    "from cvnets.resnet.net import ResNet, Structure\n"
+    "from nns.resnet.net import ResNet, Structure\n"
    ]
   },
   {
@@ -140,7 +140,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "neural-nets",
    "language": "python",
    "name": "python3"
   },
