--- a/notebooks/yolo/v2/infer.ipynb
+++ b/notebooks/yolo/v2/infer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,13 @@
     "import torch\n",
     "from dotenv import find_dotenv\n",
     "\n",
-    "from cvnets.yolo.v2 import utils\n",
-    "from cvnets.yolo.v2.dataset import VOCDataset\n",
-    "from cvnets.yolo.v2.net import YOLOv2\n",
-    "from cvnets.yolo.voc import VOCSplit\n",
+    "from nns.yolo.v2 import utils\n",
+    "from nns.yolo.v2.dataset import VOCDataset\n",
+    "from nns.yolo.v2.net import YOLOv2\n",
+    "from nns.yolo.voc import VOCSplit\n",
     "\n",
     "root = Path(find_dotenv(raise_error_if_not_found=True)).parent.absolute()\n",
-    "checkpoints = root.joinpath(\"src\", \"cvnets\", \"yolo\", \"v2\", \"checkpoints\")\n",
+    "checkpoints = root.joinpath(\"src\", \"nns\", \"yolo\", \"v2\", \"checkpoints\")\n",
     "\n",
     "assert checkpoints.exists()"
    ]
@@ -152,7 +152,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "neural-nets",
    "language": "python",
    "name": "python3"
   },
