--- a/notebooks/vae/coco_decomposition.ipynb
+++ b/notebooks/vae/coco_decomposition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
     "from numpy.typing import NDArray\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "from cvnets.vae.dataset import COCOKeypointsDataset, IntermediateKeypoints\n",
-    "from cvnets.vae.net import VAENet\n",
+    "from nns.vae.dataset import COCOKeypointsDataset, IntermediateKeypoints\n",
+    "from nns.vae.net import VAENet\n",
     "\n",
     "plt.rcParams[\"text.usetex\"] = True\n",
     "plt.rcParams[\"axes.spines.right\"] = False\n",
@@ -28,7 +28,7 @@
     "plt.style.use(\"seaborn-v0_8-whitegrid\")\n",
     "\n",
     "root = Path(find_dotenv(raise_error_if_not_found=True)).parent.absolute()\n",
-    "checkpoints = root.joinpath(\"src\", \"cvnets\", \"vae\", \"checkpoints\")\n",
+    "checkpoints = root.joinpath(\"src\", \"nns\", \"vae\", \"checkpoints\")\n",
     "\n",
     "assert checkpoints.exists()\n"
    ]
@@ -347,7 +347,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "neural-nets",
    "language": "python",
    "name": "python3"
   },
@@ -361,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
