--- a/notebooks/yolo/v2/anchor_bboxes_clustering.ipynb
+++ b/notebooks/yolo/v2/anchor_bboxes_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "from pyclustering.cluster.kmeans import kmeans\n",
     "from pyclustering.utils.metric import distance_metric, type_metric\n",
     "\n",
-    "from cvnets.yolo.voc import VOCSplit, load_voc_dataset\n",
+    "from nns.yolo.voc import VOCSplit, load_voc_dataset\n",
     "\n",
     "plt.rcParams[\"text.usetex\"] = True\n",
     "plt.rcParams[\"axes.spines.right\"] = False\n",
@@ -263,7 +263,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "neural-nets",
    "language": "python",
    "name": "python3"
   },
